--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,6 +53,84 @@ h5
 
 
 
+
+
+.float-layout {
+  padding: 5px 5px;
+  float: left;
+  width: 100%;
+  height: auto;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.card-container {
+  overflow: hidden;
+}
+
+.card {
+  background-color: dodgerblue;
+  color: black;
+  min-height: 100%; /*replace this it in width: 100%*/
+  width: 50%;
+ 
+}
+
+.card-title {
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+  padding-top: 20px;
+}
+
+.card-desc {
+  padding: 10px;
+  text-align: left;
+  font-size: 18px;
+}
+
+/*add this it*/
+.card-image {
+  display: flex;
+}
+/*-------------*/
+
+div.card-image img {
+  /* width: 260;
+  height: 200;
+  margin-top: 10px; */
+
+  display: block;
+  margin-top: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+  width: 30%;
+  height: 40%;
+
+
+}
+
+/* Phone Devices Query */
+@media only screen and (max-width: 37.5em) {
+  div.card-image img {
+    width: 100%;
+    height: auto;
+  }
+  
+  /*add this it*/
+  .card-image {
+     flex-direction: column;
+  }
+  /*----------------------*/
+
+  .card {
+    width: 100%;
+    margin-top: -4px;
+  }
+}
+
+
 /**********************************************************404 Not Found ********************************************************/
    
 
@@ -606,78 +684,3 @@ input:checked + label {
 
 
 
-
-
-.float-layout {
-  padding: 5px 5px;
-  float: left;
-  width: 100%;
-  height: auto;
-  box-sizing: border-box;
-  margin: 0;
-}
-
-.card-container {
-  overflow: hidden;
-}
-
-.card {
-  background-color: dodgerblue;
-  color: black;
-  min-height: 100%; /*replace this it in width: 100%*/
-  width: 50%;
-  float: right;
-}
-
-.card-title {
-  font-size: 30px;
-  text-align: center;
-  font-weight: bold;
-  padding-top: 20px;
-}
-
-.card-desc {
-  padding: 10px;
-  text-align: left;
-  font-size: 18px;
-}
-
-/*add this it*/
-.card-image {
-  display: flex;
-}
-/*-------------*/
-
-div.card-image img {
-  /* width: 260;
-  height: 200;
-  margin-top: 10px; */
-
-  display: block;
-  margin-top: auto;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: auto;
-  width: 30%;
-
-
-}
-
-/* Phone Devices Query */
-@media only screen and (max-width: 37.5em) {
-  div.card-image img {
-    width: 100%;
-    height: auto;
-  }
-  
-  /*add this it*/
-  .card-image {
-     flex-direction: column;
-  }
-  /*----------------------*/
-
-  .card {
-    width: 100%;
-    margin-top: -4px;
-  }
-}
